@@ -119,6 +119,7 @@ pOption = do discard (P.symbol "errorcontext"); return ErrContext
       <|> do discard (P.symbol "showimplicits"); return ShowImpl
       <|> do discard (P.symbol "originalerrors"); return ShowOrigErr
       <|> do discard (P.symbol "autosolve"); return AutoSolve
+      <|> do discard (P.symbol "nobanner") ; return NoBanner
 
 codegenOption :: P.IdrisParser Codegen
 codegenOption = do discard (P.symbol "javascript"); return ViaJavaScript
